<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill"
            android:id="@+id/textView"
            android:textSize="14sp"
            android:textColor="#000000" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/val"
            android:layout_weight="1"
            android:textSize="17sp"
            android:inputType="numberDecimal"
            android:text="@string/billvalue" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:id="@+id/linearLayout2">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_weight="0.38" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/diez"
            android:id="@+id/textView2"
            android:textSize="12sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_weight="0.25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/quince"
            android:id="@+id/textView3"
            android:textSize="12sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_weight="0.27" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/veinte"
            android:id="@+id/textView4"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="285dp"
        android:layout_height="60dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:id="@+id/linearLayout3">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.58" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tip1"
                android:id="@+id/textView5"
                android:layout_weight="0.21"
                android:gravity="right"
                android:textSize="14sp" />

            <EditText
                android:layout_width="37dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/tip10"
                android:text="@string/tip10"
                android:textSize="14sp"
                android:layout_weight=".27"
                android:gravity="center" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip15"
                android:layout_weight=".27"
                android:text="@string/tip15"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:textSize="14sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip20"
                android:layout_weight=".27"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/tip20" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total1"
            android:id="@+id/textView6"
            android:gravity="right"
            android:textSize="14sp"
            android:layout_weight="0.15" />

        <EditText
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:id="@+id/tot10"
            android:layout_weight=".30"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:text="@string/total10" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tot15"
            android:layout_weight=".30"
            android:text="@string/total15"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tot20"
            android:layout_weight=".30"
            android:text="@string/total20"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="@string/cust"
            android:id="@+id/textView7"
            android:gravity="center"
            android:layout_weight="0.05" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bar"
            android:layout_weight="1"
            android:indeterminate="false"
            android:layout_gravity="center_vertical"
            android:max="100"
            android:progress="25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bartxt"
            android:text="@string/pbar" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/tip2"
            android:id="@+id/textView8"
            android:layout_weight="0.21"
            android:gravity="bottom|right"
            android:textSize="14sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip"
            android:layout_weight="0.26"
            android:text="@string/tip"
            android:textSize="14sp"
            android:gravity="center"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total2"
            android:id="@+id/textView9"
            android:layout_weight="0.27"
            android:gravity="right"
            android:textSize="14sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total"
            android:layout_weight="0.26"
            android:text="@string/total"
            android:textSize="14sp"
            android:gravity="center"
            android:inputType="numberDecimal" />

    </LinearLayout>

</RelativeLayout>
